Fix build error in headless_web_contents_impl.cc

5440d9e22a20b1cc1eb56f2843f540df95092c2c [formerly e2df1d707cc2a7ba4a5b49f5f1f6be249ff05baf] adds a new parameter to
WebContentsDelegate::WebContentsCreated. This CL updates the
implementation in headless_web_contents_impl.cc accordingly.

BUG=649855
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2385123004
Cr-Commit-Position: refs/heads/master@{#422745}

Former-commit-id: a00c95e20ede74fb518518fd45c50136c972db57