headless/lib/browser/headless_web_contents_impl.cc
@@ -66,6 +66,7 @@ class HeadlessWebContentsImpl::Delegate : public content::WebContentsDelegate {
       : browser_context_(browser_context) {}
 
   void WebContentsCreated(content::WebContents* source_contents,
+                          int opener_render_process_id,
                           int opener_render_frame_id,
                           const std::string& frame_name,
                           const GURL& target_url,
